Fix remove .fleet and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ out/
 # editors
 .idea
 .vscode
+.fleet
 
 # well, looks strange to ignore package-lock, but we have only pretter and it's temproray
 package-lock.json
