--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = lib/solidity-utils
 	url = https://github.com/bgd-labs/solidity-utils
 	branch = v1.1.0
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+	branch = v1.1.1
