--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = lib/aave-address-book
 	url = https://github.com/bgd-labs/aave-address-book
 	branch = v1.5.0
+[submodule "lib/aave-helpers"]
+	path = lib/aave-helpers
+	url = https://github.com/bgd-labs/aave-helpers
+	branch = v1.2.0
